wp-content/themes/maine-learning-home/style.css
/* ... */
a, a:visited
{
	color: #1FB3DD;
	/* ML */
	font-weight: bold;
	/* ML */
	text-decoration: none;
	/* ML */
}

ul.item-list li div.item-title, ul.item-list li div.item-title a
{
	font-weight: bold;
	text-decoration: none;
}

ul.item-list li div.item-desc
{
	display: none;
	height: 0;
}

/* Images
----------------------- */

img.alignright { margin: 0 0 2px 5px; }

/* Summary
----------------------- */

.summary
{
	background: transparent;
	color: #999;
	font-family: 'Cabin',arial,serif;
	font-size: 18px;
	letter-spacing: -0.2px;
	line-height: 160%;
	margin: 4px 0 20px 0;
	padding: 0;
}

/* Comments
----------------------- */

#comments h3
{
	font-size: 18px;
	/* ML */
}

.comment-entry
{
	font-size: 12px;
	/* ML */
}

.comment-entry a, .comment-entry a:visited
{
	font-weight: normal;
	/* ML */
}

.comments-closed
{
	display: none;
	/* ML */
	height: 0;
	/* ML */
}

body.home h2.pagetitle, .comment-form-comment label { display: none; }

/* ----------------------
BUDDYPRESS PANELS: HEADER
----------------------- */

div#item-header img.avatar
{
	height: 100px;
	width: 100px;
}

div#item-header h2 { font-size: 22px; }
div#item-header div#item-header-content { margin-left: 130px; }

div#item-header div#item-meta
{
	border-top: 1px solid #ddd;
	color: #888888;
	display: inline-block;
	font-size: 13px;
	margin: 14px 0 0 0;
	padding: 10px 0 20px 0;
	width: 80%;
}

#item-meta p
{
	float: left;
	width: 420px;
}

div#item-header div#item-actions
{
	width: 14%;
	margin: 0 0 0px 15px;
}

/* ----------------------
BUDDYPRESS PANELS: ACTIVITY
----------------------- */

div#item-header span.activity, div#item-header h2 span.highlight
{
	margin-bottom: 0px;
	vertical-align: top;
}

.dir-form h3 { font-size: 18px; }
.activity-list .activity-content .activity-header, .activity-list .activity-content .comment-header { font-size: 12px; }
ul#activity-stream li.activity_update { padding-top: 20px; }

li.new_forum_post div.activity-meta, li.exb div.activity-meta, li.added_group_document div.activity-meta {
	display: none;
}

.exb blockquote
{
	background-color: #eaeaea;
	color: #666;
	font-size: 15px;
	font-style: normal !important;
	padding: 18px 10px 4px 20px;
}

li.exb blockquote p a
{
	font-family: "myriad-pro-1","myriad-pro-2",'Helvetica Neue',Helvetica,'Lucida Grande','Lucida Sans Unicode',sans-serif;
	font-size: 13px;
	float: right;
	margin: 2px 4px 0px 0px;
}

.activity-list li.new_forum_post .activity-content .activity-inner, .activity-list li.new_forum_topic .activity-content .activity-inner
{
	background-color: #eaeaea;
	color: #666;
	padding: 10px 10px 10px 14px;
}

.activity-list .activity-content .activity-header, .activity-list .activity-content .comment-header
{
	line-height: 180%;
	margin-bottom: 16px;
}

a.view-post
{
	font-size: 13px;
	float: right;
	padding: 0 10px 8px 0;
}

span.activity-read-more
{
	display: block;
	font-size: 13px;
	float: right;
}

div.activity-meta { clear: right; }

.bpm-no-images .bpm-inner-text
{
	font-size: 13px;
	text-decoration: none;
}

/* ----------------------
BUDDYPRESS PANELS: ITEMS
----------------------- */

.single-item .group-subscription-div
{
	clear: none !important;
	float: right;
	padding-top: 0 !important;
	padding-bottom: 10px;
	width: 20%;
	text-align: right;
}

#item-body h4 { padding: 4px 0 0 12px; }
div.pagination { margin: 0; }
span.activity, div#message p { background: -moz-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)) repeat scroll 0 0 #fff0bf; }
span.activity, div#message p { border: 1px solid #E1CA82; }
#message-thread { margin: 10px 10px 10px 14px; }
table#message-threads { margin: 0; }
.standard-form textarea { margin-left: 20px; }
p.desc { padding-top: 14px; }

/* ----------------------
BUDDYPRESS PANELS: TABS
----------------------- */

div.item-list-tabs
{
	background: transparent;
	margin: 0;
}

ul.item-list li { border-bottom: 1px solid #cfcfcf; }

div.item-list-tabs ul li
{
	float: left;
	margin: 5px 0 0 0;
}

div.item-list-tabs ul li a, div.item-list-tabs ul li span
{
	font-size: 12px;
	/* ML */
	padding: 6px 10px 6px 10px;
	text-transform: uppercase;
}

div.item-list-tabs ul li a span
{
	text-shadow: none;
	/* ML */
}

div.item-list-tabs ul li:first-child
{
	margin-left: 0px;
	/* ML */
}

div#subnav.item-list-tabs ul li, div#subnav.item-list-tabs ul li a
{
	font-size: 12px;
	text-transform: none;
}

div#subnav.item-list-tabs ul li.selected a, div#subnav.item-list-tabs ul li.current a
{
	background: transparent;
	border-top-left-radius: 0px;
	border-top-right-radius: 0px;
}

div#subnav.item-list-tabs
{
	background: none repeat scroll 0 0 #e5e5e5;
	border-bottom: transparent;
	margin: 0;
}

.generic-button
{
	float: right;
	margin-bottom: 4px;
}

div#item-header div.generic-button, div#item-header a.button
{
	float: right;
	margin: 10px 0 10px 0;
}

#item-buttons { width: auto; }

/* ----------------------
BP PANELS: PROFILE
----------------------- */

table.profile-fields { margin-left: 20px; }
.profile p { margin: 0 0 10px 12px; }

/* ----------------------
BP PANELS: ACTIVITIES
----------------------- */

div.activity { background: #efefef; }
div.activity-avatar { margin: 6px 0 0 16px; }
div.activity-comments div.acomment-content { font-size: 12px; }
/* ... */

